# care2give-be-cms

./: .env.example  .gitignore  Dockerfile  README.md  fly.toml  logging.yaml  main.py  package-lock.json  package.json  pyproject.toml
dependencies/: auth_policy.py  cognito.py
endpoints/v1_routers/: __init__.py  auth.py
models/: __init__.py  _base.py  user.py
prisma/: schema.prisma  seed.ts
prisma/migrations/20240107144748_seed/: migration.sql
prisma/migrations/20240108064740_/: migration.sql
src/: app.ts  client.ts  constants.ts  s3Client.ts
src/aws/: s3Client.ts  sesClient.ts
src/config/: config.ts
src/controllers/: campaign.controller.ts  cms.controller.ts  email.controller.ts  index.ts  payment.controller.ts
src/controllers/cms/: analytics.controller.ts  (+5 more)
src/middlewares/: apiErrorHandler.ts  clerkValidateOrigin.ts  customJSONBodyParser.ts  errorHandler.ts  multer.ts  multerErrorHandler.ts
src/routes/: index.ts
src/services/: campaign.service.ts  cms.service.ts  donation.service.ts  email.service.ts  index.ts  payment.service.ts
src/types/: DurationFilter.ts  FindCampaignByIdSelect.ts  GetCampaignNamesSelect.ts  ListCampaignsSelect.ts  SelectDonationByDate.ts  cms.types.ts  payment.ts  payment.types.ts
src/utils/: Encrypter.ts  catchAsync.ts  createdAtFilter.ts
src/validations/: campaign.validation.ts  index.ts  payment.validation.ts
terraform/: .terraform.lock.hcl  user_pool.tf  user_pool_lambda.tf  vars.tf
terraform/lambda/: PreSignUpMergeExternalAccountWithNativeAccount.py
utils/: aws.py  constants.py  exception.py  logging.py
(+25 files in other folders)
