[tool.poetry]
name = "care2give-be-cms"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "care2give_be_cms"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = "^0.23.2"
mangum = "^0.17.0"
boto3 = "^1.33.12"
boto3-stubs = {extras = ["cognito-idp"], version = "^1.33.12"}
pydantic = {extras = ["email"], version = "^2.5.2"}
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
google-api-python-client = "^2.111.0"
google-auth-oauthlib = "^1.2.0"
requests = "^2.31.0"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
